Updates totals and averages with filters and displays in UI

--- a/Exercise Tracker.csproj
+++ b/Exercise Tracker.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Classes\Activities.cs" />
     <Compile Include="Classes\Activity.cs" />
     <Compile Include="Classes\SqlDAL.cs" />
+    <Compile Include="Classes\SummaryStats.cs" />
     <Compile Include="UpdateActivity.xaml.cs">
       <DependentUpon>UpdateActivity.xaml</DependentUpon>
     </Compile>
